# clearurls

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: deserialize_utils.rs  lib.rs  rules.rs
src/tests/: mod.rs
tests/: test.rs  test_linkify.rs  test_markdown.rs  test_single_url.rs
